syntax = "proto3";

package helvetia;

option java_package = "helvetia";
option java_multiple_files = true;

message BeRead {
  int64 id = 1;
  int64 timestamp = 2;
  string aid = 3;
  string category = 4;
  int32 readNum = 5;
  repeated string readUidList = 6;
  int32 commentNum = 7;
  repeated string commentUidList = 8;
  int32 agreeNum = 9;
  repeated string agreeUidList = 10;
  int32 shareNum = 11;
  repeated string shareUidList = 12;
}

message BeReadList {
  repeated BeRead bereads = 1;
  int64 totalCount = 2;
}